# repysitory

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
docs/: QUERY_TRACKING.md  SCHEMA_VS_DOMAIN.md
examples/: db_setup.py  decorator_explanation.py  enforced_search_example.py  feature_system_example.py  query_tracking_example.py  sample_data.py  schema_vs_domain_example.py  sorting_examples.py  stack_trace_example.py  timestamp_example.py  transaction_behavior.py  transaction_example.py  transactional_query_logs_example.py  type_safe_fields_example.py
features/timestamps/: timestamp_context.md
src/: __init__.py  database_connection.py  database_operations.py  db_context.py  entities.py  entity_mapper.py  post_repository.py  query_builder.py  repository.py  search_condition_builder.py
src/features/: __init__.py  base_feature.py  soft_delete_feature.py  timestamp_feature.py
tests/: bulk_update_test.py  bulk_update_timestamp_test.py  conftest.py  db_context_release_test.py  db_context_test.py  edge_cases_test.py  group_by_tests.py  post_entities.py  post_repository.py  query_tracking_test.py  repository_edge_cases_test.py  repository_operations_test.py  test_query_builder.py  test_repository_with_query_builder.py  test_type_safe_fields.py  timestamp_integration_test.py  timestamp_test.py
tests/query_builder/: __init__.py  special_cases_test.py  test_basic_operations.py  test_grouped_conditions.py  test_in_conditions.py  test_or_where_conditions.py  test_order_by_and_complex.py  test_pagination.py  test_where_conditions.py
tests/query_tracking/: __init__.py  test_query_tracking.py  test_transactional_decorator.py
tests/soft_delete/: __init__.py  conftest.py  test_soft_delete_integration.py
todos/: todos.md
